CRUD for artist
